# vae-reconstruction-scarcity

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: downstream_smoke.yaml  downstream_xray_denoising_ae.yaml  downstream_xray_original.yaml  downstream_xray_plain_vae.yaml  downstream_xray_skip_vae.yaml  downstream_xray_vae.yaml  final_experiment.yaml  reconstruction_smoke.yaml
docs/: dataset.md  experiments.md  final_protocol.md  results_interpretation.md
legacy/: Presentation.py  image_data_processing.py  mainVAE.py  model.py  statistical_interpretation.py  training.py  utilsVAE.py  vaeSS.py
legacy/old_inverse_problem_scaffold/: README.md  default.yaml
legacy/old_xray_vae/: README.md
scripts/: aggregate_final_results.py  analyze_sample_efficiency.py  compare_original_vs_reconstruction.py  compare_original_vs_vae.py  compare_reconstruction_methods.py  make_smoke_downstream_figure.py  plot_sample_size_curve.py  run_downstream_xray_original.py  run_downstream_xray_reconstruction.py  run_downstream_xray_vae.py  run_final_experiment.py  run_smoke_downstream.py  run_smoke_reconstruction.py
src/vae_scarcity/: __init__.py  plotting.py
tests/: test_classifiers.py  test_denoising_autoencoder.py  test_downstream.py  test_import.py  test_loaders.py  test_plain_vae.py  test_plotting.py  test_reconstruction_metrics.py  test_reconstruction_model_builder.py  test_reconstruction_training_import.py  test_sample_size.py  test_splits.py  test_vae.py  test_vae_builder.py  test_vae_training.py
(+17 files in other folders)
